# iced-swdir-tree

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  NOTICE  README.md  ROADMAP.md
.github/: SECURITY.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  book.toml  configuration.md  drag-and-drop.md  events.md  features.md  keyboard.md  multi-select.md  search.md
docs/design/: README.md  core-design.md  feature-specs.md  porting-to-dioxus.md  state-machine.md
docs/guide/: configuration.md  drag-and-drop.md  icon-themes.md  incremental-search.md  keyboard-navigation.md  multi-select.md  prefetch.md
docs/internals/: architecture.md  development.md
docs/reference/: features.md
docs/src/: SUMMARY.md  introduction.md
examples/: basic.rs  drag_drop.rs  icon_theme.rs  item_tree.rs  keyboard_nav.rs  multi_select.rs  search.rs  with_icons.rs
rfcs/: README.md
rfcs/archive/: 003-extract-swdir-tree-core.md
rfcs/done/: 001-generic-item-tree.md  002-item-tree-drag-and-drop.md
src/: directory_tree.rs  item_tree.rs  lib.rs
src/directory_tree/: config.rs  drag.rs  error.rs  executor.rs  icon.rs  keyboard.rs  message.rs  node.rs  search.rs  selection.rs  update.rs  view.rs  walker.rs
src/item_tree/: drag.rs  node.rs  search.rs  (+1 more)
tests/: error_paths.rs  expand_collapse.rs  filter_modes.rs  icon_theme.rs  integration.rs  item_tree_drag_drop.rs  prefetch.rs  runtime_filter.rs  search.rs  selection_basic.rs  tree.rs  tree_drag_drop.rs  tree_errors.rs  tree_executor.rs  tree_filter_preservation.rs  tree_filters.rs  tree_multi_select.rs  tree_selection.rs
(+31 files in other folders)
